Adapt requests.html to Bootstrap

--- a/src/main/resources/templates/requests.html
+++ b/src/main/resources/templates/requests.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
-
-    <link th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" rel="stylesheet"/>
-    <link th:href="@{/css/style.css}" rel="stylesheet"/>
-    <title>Запросы</title>
-</head>
+<head th:replace="fragments/head :: head"></head>
 <body>
-<div>
-    <table>
+
+<div th:replace="fragments/header :: header"></div>
+<div class="container mt-4">
+
+
+    <table class="table table-sm table-hover">
         <thead>
         <tr>
-            <th>№</th>
-            <th>Рубрика</th>
-            <th>Тема</th>
-            <th>Тема</th>
-            <th>Вопрос (кратко)</th>
-            <th>Ответ (кратко)</th>
-            <th>Срочный</th>
-            <th>Дата получения</th>
+            <th scope="col">№</th>
+            <th scope="col">Рубрика</th>
+            <th scope="col">Тема</th>
+            <th scope="col">Тема</th>
+            <th scope="col">Вопрос (кратко)</th>
+            <th scope="col">Ответ (кратко)</th>
+            <th scope="col">Срочный</th>
+            <th scope="col">Дата получения</th>
         </tr>
         </thead>
         <tbody>
+
         <tr th:each="request : ${requests}">
-            <td th:text="${request.getId()}">№</td>
+            <th scope="row"><a th:href="@{/requests/{requestId}(requestId=${request.getId()})}"><span
+                    th:text="${request.getId()}">Изменить</span></a></th>
             <td th:text="${request.getRubric().getName()}">Рубрика</td>
             <td th:text="${request.getTheme().getName()}">Тема</td>
             <td th:text="${request.getSubject()}">Тема</td>
@@ -31,40 +32,46 @@
             <td th:text="${request.getShortAnswer()}">Ответ (кратко)</td>
             <td th:text="${request.isUrgent()}">Срочный</td>
             <td th:text="${#temporals.format(request.getReceiptDate(), 'dd.MM.yyyy')}">Дата полученя</td>
+
         </tr>
         </tbody>
     </table>
-    <div class="row">
-        <div class="form-group col-md-1">
-            <select class="form-control pagination" id="pageSizeSelect">
-                <option th:each="pageSize : ${pageSizes}" th:text="${pageSize}" th:value="${pageSize}"
-                        th:selected="${pageSize} == ${selectedPageSize}"></option>
-            </select>
-        </div>
-        <div th:if="${requests.totalPages != 1}" class="form-group col-md-11 pagination-centered">
-            <ul class="pagination">
-                <li th:class="${requests.number == 0} ? disabled">
-                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=1)}">&laquo;</a>
-                </li>
-                <li th:class="${requests.number == 0} ? disabled">
-                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=${requests.number})}">&larr;</a>
-                </li>
-                <li th:class="${requests.number == (page - 1)} ? 'active pointer-disabled'"
-                    th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}">
-                    <a class="pageLink" th:href="@{/(pageSize=${selectedPageSize}, page=${page})}"
-                       th:text="${page}"></a>
-                </li>
-                <li th:class="${requests.number + 1 == requests.totalPages} ? disabled">
-                    <a class="pageLink"
-                       th:href="@{/(pageSize=${selectedPageSize}, page=${requests.number + 2})}">&rarr;</a>
-                </li>
-                <li th:class="${requests.number + 1 == requests.totalPages} ? disabled">
-                    <a class="pageLink"
-                       th:href="@{/(pageSize=${selectedPageSize}, page=${requests.totalPages})}">&raquo;</a>
-                </li>
-            </ul>
-        </div>
-    </div>
+
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center">
+            <li class="page-item" th:classappend="${requests.number == 0} ? disabled">
+                <a class="page-link"
+                   th:href="@{/requests/(pageSize=${selectedPageSize}, page=1)}"
+                   aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item" th:classappend="${requests.number == 0} ? disabled">
+                <a class="page-link"
+                   th:href="@{/requests/(pageSize=${selectedPageSize}, page=${requests.number})}">&larr;</a>
+            </li>
+            <li class="page-item"
+                th:each="page : ${#numbers.sequence(pager.startPage, pager.endPage)}"
+            th:classappend="${requests.number == (page - 1)} ? active">
+                <a class="page-link" th:href="@{/requests/(pageSize=${selectedPageSize}, page=${page})}"
+                   th:text="${page}"></a>
+            </li>
+            <li class="page-item" th:classappend="${requests.number + 1 == requests.totalPages} ? disabled">
+                <a class="page-link"
+                   th:href="@{/requests/(pageSize=${selectedPageSize}, page=${requests.number + 2})}">&rarr;</a>
+            </li>
+            <li class="page-item" th:classappend="${requests.number + 1 == requests.totalPages} ? disabled">
+                <a class="page-link"
+                   th:href="@{/requests/(pageSize=${selectedPageSize}, page=${requests.totalPages})}"
+                   aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
+
+    <div th:replace="fragments/footer :: footer"></div>
 </div>
 
 </body>
