--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -28,19 +28,20 @@
              aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLabel">Фильтр</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <form>
+                    <form action="#" th:action="@{/requests}" method="get">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLabel">Фильтр</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+
+                        <div class="modal-body">
                             <div class="row">
                                 <div class="col-4">
                                     <div class="form-group">
                                         <label for="filterRequestId">Код запроса</label>
-                                        <input class="form-control" type="text" id="filterRequestId">
+                                        <input class="form-control" type="text" name="id" id="filterRequestId"/>
                                     </div>
                                 </div>
                                 <div class="col-4">
@@ -56,12 +57,20 @@
                                     </div>
                                 </div>
                             </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Отменить</button>
-                        <button type="button" class="btn btn-primary">Применить</button>
-                    </div>
+                            <div class="row">
+                                <div class="col-12">
+                                    <div class="form-group">
+                                        <label for="filterAnswer">Ответ кратко</label>
+                                        <input class="form-control" type="text" name="answer" id="filterAnswer">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Отменить</button>
+                            <button type="submit" class="btn btn-primary">Применить</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
