--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -4,11 +4,9 @@
 <body>
 
 <div th:replace="fragments/header :: header"></div>
-<div class="container mt-4">
+<div class="container mt-4 mb-4">
 
-
-    <!--    <div th:text="${request.getRubric().getName()}"></div>-->
-    <form>
+    <form th:each="request : ${requests}">
 
         <div class="row">
             <div class="col-1">
@@ -198,7 +196,8 @@
             </div>
             <div class="col-2">
                 <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="isEntity" th:checked="${request.isEntity()}">
+                    <input class="form-check-input" type="checkbox" value="" id="isEntity"
+                           th:checked="${request.isEntity()}">
                     <label class="form-check-label" for="isEntity">
                         Юр. лицо
                     </label>
@@ -214,12 +213,10 @@
                 </div>
             </div>
         </div>
-
-
-
-        <div th:replace="fragments/footer :: footer"></div>
     </form>
 </div>
+<div th:replace="fragments/pager :: pager"></div>
+<div th:replace="fragments/footer :: footer"></div>
 
 </body>
 </html>
