--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -15,7 +15,7 @@
             <div class="col-1">
                 <div class="form-group">
                     <label for="formInNumber">Исх. №</label>
-                    <input class="form-control" type="text" id="formInNumber" th:value="${request.getInNumber()}">
+                    <input class="form-control" type="text" id="formInNumber" th:value="${request.getOutNumber()}">
                 </div>
             </div>
             <div class="col-2">
