Change column names

--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -53,8 +53,8 @@
                                 </div>
                                 <div class="col-4">
                                     <div class="form-group">
-                                        <label for="filterInNumber">Исх. №</label>
-                                        <input class="form-control" type="text" name="outNumber" id="filterInNumber" th:value="${filter.getOutNumber()}">
+                                        <label for="filterOutNumber">Исх. №</label>
+                                        <input class="form-control" type="text" name="outNumber" id="filterOutNumber" th:value="${filter.getOutNumber()}">
                                     </div>
                                 </div>
                                 <div class="col-4">
