--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -14,8 +14,8 @@
             </div>
             <div class="col-1">
                 <div class="form-group">
-                    <label for="formInNumber">Исх. №</label>
-                    <input class="form-control" type="text" id="formInNumber" th:value="${request.getOutNumber()}">
+                    <label for="formRegNumber">Исх. №</label>
+                    <input class="form-control" type="text" id="formRegNumber" th:value="${request.getOutNumber()}">
                 </div>
             </div>
             <div class="col-2">
